# hub2gos

./: .buildinfo  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  quick_viewer.html  search.html  searchindex.js
.doctrees/: changelog.doctree  environment.pickle  index.doctree
.github/workflows/: docker.yml  docs.yml  test.yml
_sources/: index.rst.txt
docs/source/: conf.py  index.rst
src/hub2gos/: __init__.py  cli.py  compiler.py  components.py  containers.py  factory.py  parser.py  utils.py
tests/: README.md  test_cli_integration.py  test_compiler.py  test_components.py  test_containers.py  test_factory.py  test_parser.py  test_utils.py
tests/data/normalMode/: genomes.txt  hub.txt
tests/data/normalMode/mm10/: trackDb.txt
tests/data/oneFileMode/: hub.txt
