[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hub2gos"
version = "0.1.0"
authors = [
  { name="Shaun Adkins", email="shaun.adkins@gmail.com" },
]
description = "A Python compiler to map UCSC Track Hub configurations to Gosling.js specs."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "requests>=2.28.0",
    "gosling>=0.3.0",
    "hic2cool>=0.8.3",
    "pybigwig>=0.3.25",
]

[project.scripts]
hub2gos = "hub2gos.cli:main"

[project.urls]
"Homepage" = "https://github.com/adkinsrs/hub2gos"

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/hub2gos/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
