[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hub2gos"
version = "0.1.0"
authors = [
  { name="Shaun Adkins", email="shaun.adkins@gmail.com" },
]
description = "A Python compiler to map UCSC Track Hub configurations to Gosling.js specs."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "requests>=2.28.0",
    "gosling>=0.3.0",
]

[project.scripts]
hub2gos = "hub2gos.cli:main"

[project.urls]
"Repository" = "https://github.com/adkinsrs/hub2gos"
"Documentation" = "https://adkinsrs.github.io/hub2gos/"
"Changelog" = "https://github.com/adkinsrs/hub2gos/blob/main/CHANGELOG.md"
"Issues" = "https://github.com/adkinsrs/hub2gos/issues"

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
tag_name = "v{new_version}"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/hub2gos/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
